[metadata]
name = jpradio
version = attr: jpradio._version.__version__
author = hejyll
author_email = hejyll@gmail.com
url = https://github.com/hejyll/jpradio
description = file: README.md
long_description_content_type = text/markdown
keywords = radio
license = CC0 1.0
classifiers =
    License :: OSI Approved :: Creative Commons Zero v1.0 Universal
    Programming Language :: Python :: 3.7

[options]
package_dir =
    =src
packages = find:
zip_safe = True
install_requires =
    html2text==2020.1.16
    mutagen==1.44.0
    requests==2.22.0
    selenium==3.141.0
    webdriver_manager==3.8.4

[options.extras_require]
dev = 
    black==22.10.0
    isort==5.10.1
    pytest==7.2.0
