[metadata]
name = jadio
version = attr: jadio._version.__version__
author = hejyll
author_email = hejyll@gmail.com
url = https://github.com/hejyll/jadio
description = file: README.md
long_description_content_type = text/markdown
keywords = radio
license = CC0 1.0
classifiers =
    License :: OSI Approved :: Creative Commons Zero v1.0 Universal
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
    serdescontainer @ git+https://github.com/hejyll/serdescontainer
    mutagen==1.44.0
    packaging>=21.3
    requests>=2.22.0
    selenium==4.21.0
    webdriver_manager==4.0.1

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.extras_require]
dev = 
    black==22.10.0
    isort==5.10.1
    pytest==7.2.0
